Hot fix for making navbar collapse show up

--- a/src/css/plain.css
+++ b/src/css/plain.css
@@ -517,3 +517,7 @@ codeblock {
   margin-top: 5px;
   margin-right: 0px;
 }
+
+span.icon-bar{
+    background-color: black;
+}
